<resources>
    <string name="app_name">PIOU Gaetan Formulaire Simple</string>
    <string name="action_settings">Options</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Accueil</string>
    <string name="second_fragment_label">Formulaire Simple</string>
    <string name="next">Suivant</string>
    <string name="previous">Précédent</string>

    <string name="titre">Formulaire Simple</string>
    <string name="hintId">Identifiant</string>
    <string name="hintMdp">Mot de passe</string>
    <string name="login">Se connecter</string>

    <string name="hello_first_fragment">Bonjour. Veuillez repondre au formulaire suivant</string>
    <string name="hello_second_fragment"></string>

    <string name="bonjour">Bonjour</string>
    <string name="mdp">votre mot de passe est :</string>
    <string name="erreur">Veuillez d\'abord remplir le formulaire.</string>
    <string name="genreH">Vous êtes un</string>
    <string name="genreF">Vous êtes une</string>

    <string name="radioH">Homme</string>
    <string name="radioF">Femme</string>
</resources>